# src/transaction/serializers.py
@@ -10,15 +10,19 @@ class TransactionSerializer(serializers.ModelSerializer):
         model = Transaction
         fields = '__all__'
 
+    def to_internal_value(self, data):
+        """
+        Permite inicializar los valores de la peticion
+        """
+        print("lo llama")
+        data['user'] = self.context.get("request").parser_context["kwargs"]["user"]
+        if 'category' in data:
+            data['category_id'] = data['category']
 
-class TransactionDetailSerializer(serializers.ModelSerializer):
-    """
-    Permite acceder a lo datos basicos de una transaccion.
-    """
-    class Meta:
-        model = Transaction
-        fields = '__all__'
+        return super().to_internal_value(data)
 
+    def update(self, instance, validated_data):
+        return super().update(instance, validated_data)
 
 class TransactionSummarySerializer(serializers.Serializer):
     """
